--- a/package.json
+++ b/package.json
@@ -6,11 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --coverage",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "6.1.2",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.5.5",
+    "jest": "29.6.4",
+    "jest-environment-jsdom": "29.6.4"
   }
 }
