updated: navbar and sidebar

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.2",
