--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "recharts": "^2.9.0"
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.2",
