--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
+    "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
