--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dayjs": "^1.11.10",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "recharts": "^2.9.0",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^9.0.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.2",
